Enlaces en las barras y nuevos iconos de validación

--- a/index.html
+++ b/index.html
@@ -628,37 +628,37 @@ Menu <span class="caret"></span>
     <strong>CAD / 3D / BIM</strong><span class="icon-edit"></span>
     <div class="progress">
       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
-        <span class="text-progress-bar">AutoCAD 2D/3D</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.autodesk.es/products/autocad/overview">AutoCAD 2D/3D</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-        <span class="text-progress-bar">3D Studio Max</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.autodesk.es/products/3ds-max/overview">3D Studio Max</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-        <span class="text-progress-bar">Revit</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.autodesk.es/products/revit-family/overview">Revit</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-        <span class="text-progress-bar">Archicad</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.graphisoft.es/archicad/">Archicad</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-        <span class="text-progress-bar">Allplan</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="https://www.allplan.com/es.html">Allplan</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-        <span class="text-progress-bar">SketchUp</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="https://www.sketchup.com/es">SketchUp</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-        <span class="text-progress-bar">Piranesi</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.piranesi.co.uk/index.html">Piranesi</a></span>
       </div>
     </div>
   </div>
@@ -667,22 +667,22 @@ Menu <span class="caret"></span>
     <strong>GIS / SIG</strong><span class="icon-globe"></span>
     <div class="progress">
       <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-        <span class="text-progress-bar">ArcGIS</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="https://www.arcgis.com/features/index.html">ArcGIS</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-        <span class="text-progress-bar">QGIS</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.qgis.org/es/site/">QGIS</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-        <span class="text-progress-bar">gvSIG</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.gvsig.com/es">gvSIG</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-        <span class="text-progress-bar">CityEngine</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.esri.com/software/cityengine">CityEngine</a></span>
       </div>
     </div>
   </div>
@@ -691,27 +691,27 @@ Menu <span class="caret"></span>
     <strong>Cálculo</strong><span class="icon-calculator"></span>
     <div class="progress">
       <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-        <span class="text-progress-bar">CypeCAD</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://cypecad.cype.es/">CypeCAD</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-        <span class="text-progress-bar">CypeCAD MEP</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://instalaciones.cype.es/">CypeCAD MEP</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-        <span class="text-progress-bar">HULC</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.minetad.gob.es/ENERGIA/DESARROLLO/EFICIENCIAENERGETICA/CERTIFICACIONENERGETICA/DOCUMENTOSRECONOCIDOS/Paginas/procedimientos-certificacion-proyecto-terminados.aspx">HULC</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
-        <span class="text-progress-bar">CE3X</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.minetad.gob.es/energia/desarrollo/EficienciaEnergetica/CertificacionEnergetica/DocumentosReconocidos/Paginas/procedimientos-certificacion-proyecto-terminados.aspx">CE3X</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-        <span class="text-progress-bar">Presto</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.rib-software.es/presto.html">Presto</a></span>
       </div>
     </div>
   </div>
@@ -719,23 +719,28 @@ Menu <span class="caret"></span>
   <div class="col-md-3">
     <strong>Diseño gráfico</strong><span class="icon-palette"></span>
     <div class="progress">
-      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-        <span class="text-progress-bar">Illustrator</span>
+      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.adobe.com/es/products/illustrator.html">Illustrator</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-        <span class="text-progress-bar">CorelDRAW</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.coreldraw.com/en/">CorelDRAW</a></span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="https://affinity.serif.com/es/designer/">Affinity Designer</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-        <span class="text-progress-bar">Photoshop</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.adobe.com/es/products/photoshop.html">Photoshop</a></span>
       </div>
     </div>
     <div class="progress">
       <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-        <span class="text-progress-bar">Pixelmator</span>
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.pixelmator.com/mac/">Pixelmator</a></span>
       </div>
     </div>
   </div>
@@ -878,12 +883,12 @@ Menu <span class="caret"></span>
       <p>
         <a target="_blank" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcsanchezcastro.github.io">
           <img style="border:0;width:88px;height:31px;"
-          src="https://www.w3.org/Icons/valid-html401-blue"
+          src="resources/valid-html5.png"
           alt="¡HTML Válido!" />
         </a>
         <a target="_blank" href="http://jigsaw.w3.org/css-validator/validator?uri=https://csanchezcastro.github.io/">
           <img style="border:0;width:88px;height:31px;"
-          src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+          src="resources/valid-css.png"
           alt="¡CSS Válido!" />
         </a>
       </p>
