--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Menu <span class="caret"></span>
         </div>
         <div class="col-md-7">
           <h1 id="minombre">Carlos Sánchez-Castro Coy</h1>
-          <p id="jumboparagraph">Arquitecto. Analista y desarrollador GIS (en formación)</p>
+          <p id="jumboparagraph">Arquitecto. Analista y desarrollador GIS</p>
         </div>
         <div class="col-md-3 text-center">
           <a id="btnjumbo" class="btn btn-info" role="button" data-toggle="collapse" href="#collapseCarousel" aria-expanded="false" aria-controls="collapseCarousel">
@@ -284,6 +284,32 @@ Menu <span class="caret"></span>
 <br>
 <table class="table table-hover table-condensed">
   <tr>
+    <td class="col-md-3 text-center">Abril - Junio 2017</td>
+    <td class="col-xs-9 col-md-9 info">Prácticas del Máster GIS de Esri España</td>
+  </tr>
+  <tr>
+    <td class="col-md-3"><span class="icon-location-pin"></span></td>
+    <td class="col-md-9">Esri España - Departamento de Servicios Profesionales <a target="_blank" href="http://www.esri.es/sobre-esri/soporte/servicios-profesionales/">Más información</a></td>
+  </tr>
+  <tr>
+    <td class="col-md-3"><span class="icon-info-with-circle"></span></td>
+    <td class="col-md-9">Área de Personalización de la Plataforma para el Proyecto ENAIRE <a target="_blank" href="http://www.enaire.es/csee/Satellite/Home">Más información</a><br>
+      Tareas desarrolladas:
+      <ul>
+        <li>Generación de una escena 3D de un aeropuerto con los edificios, las servidumbres aeronáuticas y los obstáculos</li>
+        <li>Generación de una escena 3D con las servidumbres radioeléctricas de un aeropuerto</li>
+        <li>Generación de una escena 3D con los sectores de control aéreo de un aeropuerto</li>
+        <li>Creación de animaciones 3D para la presentación de las escenas</li>
+        <li>Automatización de los geoprocesos necesarios para importar los CADs mediante scripts de Python y modelos de Model Builder</li>
+        <li>Creación de las reglas gramaticales CGA necesarias para algunos de los elementos incluidos en las escenas</li>
+        <li>Desarrollo de widgets con Web AppBuilder</li>
+      </ul>
+    </td>
+  </tr>
+</table>
+
+<table class="table table-hover table-condensed">
+  <tr>
     <td class="col-md-3 text-center">2013 - Actualidad</td>
     <td class="col-xs-9 col-md-9 info">Asesor Senior de Internet y Social Media para España</td>
   </tr>
@@ -383,20 +409,6 @@ Menu <span class="caret"></span>
 <table class="table table-hover table-condensed">
   <tr>
     <td class="col-md-3 text-center">Actualmente</td>
-    <td class="col-xs-9 col-md-9 info">Máster GIS de Esri España</td>
-  </tr>
-  <tr>
-    <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Esri España. <a target="_blank" href="http://mastergis.esri.es/">Más información</a></td>
-  </tr>
-  <tr>
-    <td class="col-md-3"><span class="icon-cycle"></span></td>
-    <td class="col-md-9">440 horas teóricas + 280 horas prácticas</td>
-  </tr>
-</table>
-<table class="table table-hover table-condensed">
-  <tr>
-    <td class="col-md-3 text-center">Actualmente</td>
     <td class="col-xs-9 col-md-9 info">Máster en Sistemas de Información Geográfica aplicados a la Ordenación del Territorio, el Urbanismo y el Paisaje</td>
   </tr>
   <tr>
@@ -406,6 +418,20 @@ Menu <span class="caret"></span>
   <tr>
     <td class="col-md-3"><span class="icon-cycle"></span></td>
     <td class="col-md-9">640 horas - 64 créditos ECTS</td>
+  </tr>
+</table>
+<table class="table table-hover table-condensed">
+  <tr>
+    <td class="col-md-3 text-center">Junio 2017</td>
+    <td class="col-xs-9 col-md-9 info">Máster GIS de Esri España</td>
+  </tr>
+  <tr>
+    <td class="col-md-3"><span class="icon-location-pin"></span></td>
+    <td class="col-md-9">Esri España. <a target="_blank" href="http://mastergis.esri.es/">Más información</a></td>
+  </tr>
+  <tr>
+    <td class="col-md-3"><span class="icon-clock"></span></td>
+    <td class="col-md-9">440 horas teóricas + 280 horas prácticas</td>
   </tr>
 </table>
 <table class="table table-hover table-condensed">
@@ -666,8 +692,13 @@ Menu <span class="caret"></span>
   <div class="col-md-3">
     <strong>GIS / SIG</strong><span class="icon-globe"></span>
     <div class="progress">
-      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
         <span class="text-progress-bar"><a class="barlink" target="_blank" href="https://www.arcgis.com/features/index.html">ArcGIS</a></span>
+      </div>
+    </div>
+    <div class="progress">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+        <span class="text-progress-bar"><a class="barlink" target="_blank" href="https://pro.arcgis.com/es/pro-app/">ArcGIS Pro</a></span>
       </div>
     </div>
     <div class="progress">
