--- a/index.html
+++ b/index.html
@@ -321,9 +321,7 @@ Menu <span class="caret"></span>
     <td class="col-md-9">Área de Personalización de la Plataforma para el Proyecto ENAIRE <a target="_blank" href="http://www.enaire.es/csee/Satellite/Home">Más información</a><br>
       Tareas desarrolladas:
       <ul>
-        <li>Generación de una escena 3D de un aeropuerto con los edificios, las servidumbres aeronáuticas y los obstáculos</li>
-        <li>Generación de una escena 3D con las servidumbres radioeléctricas de un aeropuerto</li>
-        <li>Generación de una escena 3D con los sectores de control aéreo de un aeropuerto</li>
+        <li>Generación de escenas 3D de varios aeropuertos con los edificios, los obstáculos, las servidumbres aeronáuticas y radioeléctricas y los sectores de control aéreo</li>
         <li>Creación de animaciones 3D para la presentación de las escenas</li>
         <li>Automatización de los geoprocesos necesarios para importar los CADs mediante scripts de Python y modelos de Model Builder</li>
         <li>Creación de las reglas gramaticales CGA necesarias para algunos de los elementos incluidos en las escenas</li>
