--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-info-with-circle"></span></td>
-    <td class="col-md-9">Contribución a la mejora de la calidad de los resultados de uno de los más conocidos motores de búsqueda de Internet<br>
+    <td class="col-md-9">Ayuda a la mejora de la calidad de los resultados de un conocido buscador de Internet<br>
       El puesto requiere:
       <ul>
-        <li>Capacidad para trabajar y gestionar el tiempo de manera autónoma</li>
+        <li>Habilidad para trabajar y gestionar el tiempo de forma autónoma</li>
         <li>Habilidades analíticas y gran atención al detalle</li>
         <li>Flexibilidad para adaptarse a nuevos métodos de trabajo</li>
         <li>Poseer una amplia cultura general y un gran interés por Internet</li>
