--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Lionbridge Technologies, Inc. <a target="_blank" href="http://www.lionbridge.com/es-es/">Más información</a></td>
+    <td class="col-md-9">Lionbridge Technologies, Inc. - <a target="_blank" href="http://www.lionbridge.com/es-es/">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-info-with-circle"></span></td>
-    <td class="col-md-9">Ayuda a la mejora de la calidad de los resultados de un conocido buscador de Internet<br>
+    <td class="col-md-9">Ayuda a la mejora de la calidad de los resultados de un conocido buscador de Internet<br><br>
       El puesto requiere:
       <ul>
         <li>Habilidad para trabajar y gestionar el tiempo de forma autónoma</li>
@@ -314,11 +314,11 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Esri España - Departamento de Servicios Profesionales <a target="_blank" href="http://www.esri.es/sobre-esri/soporte/servicios-profesionales/">Más información</a></td>
+    <td class="col-md-9">Esri España - Departamento de Servicios Profesionales - <a target="_blank" href="http://www.esri.es/sobre-esri/soporte/servicios-profesionales/">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-info-with-circle"></span></td>
-    <td class="col-md-9">Área de Personalización de la Plataforma para el Proyecto ENAIRE <a target="_blank" href="http://www.enaire.es/csee/Satellite/Home">Más información</a><br>
+    <td class="col-md-9">Área de Personalización de la Plataforma para el Proyecto ENAIRE - <a target="_blank" href="http://www.enaire.es/csee/Satellite/Home">Más información</a><br><br>
       Tareas desarrolladas:
       <ul>
         <li>Generación de escenas 3D de varios aeropuertos con los edificios, los obstáculos, las servidumbres aeronáuticas y radioeléctricas y los sectores de control aéreo</li>
@@ -338,11 +338,11 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Díaz Romero Arquitectos S.L.P. <a target="_blank" href="http://diaz-romero.com/">Más información</a></td>
+    <td class="col-md-9">Díaz Romero Arquitectos S.L.P. - <a target="_blank" href="http://diaz-romero.com/">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-info-with-circle"></span></td>
-    <td class="col-md-9">
+    <td class="col-md-9">Tareas desarrolladas:
       <ul>
         <li>Diseño y delineado de proyectos de arquitectura</li>
         <li>Cálculo y delineado de estructuras de hormigón armado</li>
@@ -412,7 +412,7 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Centro de Formación Permanente de la Universidad Politécnica de Valencia. <a target="_blank" href="http://www.cursosigupv.com/">Más información</a></td>
+    <td class="col-md-9">Centro de Formación Permanente de la Universidad Politécnica de Valencia - <a target="_blank" href="http://www.cursosigupv.com/">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-cycle"></span></td>
@@ -426,7 +426,7 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Esri España. <a target="_blank" href="http://mastergis.esri.es/">Más información</a></td>
+    <td class="col-md-9">Esri España - <a target="_blank" href="http://mastergis.esri.es/">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-clock"></span></td>
@@ -454,7 +454,7 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Almería. <a target="_blank" href="http://www.uapfe.com/jornadas/">Más información</a></td>
+    <td class="col-md-9">Almería - <a target="_blank" href="http://www.uapfe.com/jornadas/">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-clock"></span></td>
@@ -496,7 +496,7 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Instituto de Formación Continua del Colegio Oficial de Arquitectos de Madrid. <a target="_blank" href="http://www.coam.org/es/formacion">Más información</a></td>
+    <td class="col-md-9">Instituto de Formación Continua del Colegio Oficial de Arquitectos de Madrid - <a target="_blank" href="http://www.coam.org/es/formacion">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-clock"></span></td>
@@ -510,7 +510,7 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Instituto de Formación Continua del Colegio Oficial de Arquitectos de Madrid. <a target="_blank" href="http://www.coam.org/es/formacion">Más información</a></td>
+    <td class="col-md-9">Instituto de Formación Continua del Colegio Oficial de Arquitectos de Madrid - <a target="_blank" href="http://www.coam.org/es/formacion">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-clock"></span></td>
@@ -552,7 +552,7 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Instituto de Formación Continua del Colegio Oficial de Arquitectos de Madrid. <a target="_blank" href="http://www.coam.org/es/formacion">Más información</a></td>
+    <td class="col-md-9">Instituto de Formación Continua del Colegio Oficial de Arquitectos de Madrid - <a target="_blank" href="http://www.coam.org/es/formacion">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-clock"></span></td>
@@ -566,7 +566,7 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Instituto de Formación Continua del Colegio Oficial de Arquitectos de Madrid. <a target="_blank" href="http://www.coam.org/es/formacion">Más información</a></td>
+    <td class="col-md-9">Instituto de Formación Continua del Colegio Oficial de Arquitectos de Madrid - <a target="_blank" href="http://www.coam.org/es/formacion">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-clock"></span></td>
@@ -580,7 +580,7 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
-    <td class="col-md-9">Cátedra Universidad - Empresa de Valoraciones Inmobiliarias de la ETSAM. <a target="_blank" href="http://etsamadrid.aq.upm.es/dcta/investigacion/catedras%20universidad%20empresa/valoraciones">Más información</a></td>
+    <td class="col-md-9">Cátedra Universidad - Empresa de Valoraciones Inmobiliarias de la ETSAM - <a target="_blank" href="http://etsamadrid.aq.upm.es/dcta/investigacion/catedras%20universidad%20empresa/valoraciones">Más información</a></td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-clock"></span></td>
