--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Carlos Sánchez-Castro Coy">
-  <meta name="description" content="Carlos Sánchez-Castro Coy - Arquitecto">
-  <meta name="keywords" content="Carlos Sánchez-Castro Coy, Arquitecto, Arquitectura, GIS, SIG, Madrid, Albacete">
+  <meta name="description" content="Carlos Sánchez-Castro Coy - Arquitecto. Analista y desarrollador GIS">
+  <meta name="keywords" content="Carlos Sánchez-Castro Coy, Arquitecto, Arquitectura, GIS, SIG, 3D, BIM, Madrid, Albacete">
   <link rel="stylesheet" href="css/reset.css">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -432,6 +432,10 @@ Menu <span class="caret"></span>
     <td class="col-md-3"><span class="icon-clock"></span></td>
     <td class="col-md-9">440 horas teóricas + 280 horas prácticas</td>
   </tr>
+  <tr>
+    <td class="col-md-3"><span class="icon-info-with-circle"></span></td>
+    <td class="col-md-9">Premio extraordinario al mejor expediente del Máster</td>
+  </tr>
 </table>
 <table class="table table-hover table-condensed">
   <tr>
@@ -701,7 +705,7 @@ Menu <span class="caret"></span>
       </div>
     </div>
     <div class="progress">
-      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
         <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.qgis.org/es/site/">QGIS</a></span>
       </div>
     </div>
@@ -711,7 +715,7 @@ Menu <span class="caret"></span>
       </div>
     </div>
     <div class="progress">
-      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
         <span class="text-progress-bar"><a class="barlink" target="_blank" href="http://www.esri.com/software/cityengine">CityEngine</a></span>
       </div>
     </div>
