--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ Menu <span class="caret"></span>
 <table class="table table-hover table-condensed">
   <tr>
     <td class="col-md-3 text-center">Abril - Junio 2017</td>
-    <td class="col-xs-9 col-md-9 info">Prácticas del Máster GIS de Esri España</td>
+    <td class="col-xs-9 col-md-9 info">Prácticas del Máster en Sistemas de Información Geográfica de Esri España</td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
@@ -324,7 +324,7 @@ Menu <span class="caret"></span>
         <li>Generación de escenas 3D de varios aeropuertos con los edificios, los obstáculos, las servidumbres aeronáuticas y radioeléctricas y los sectores de control aéreo</li>
         <li>Creación de animaciones 3D para la presentación de las escenas</li>
         <li>Automatización de los geoprocesos necesarios para importar los CADs mediante scripts de Python y modelos de Model Builder</li>
-        <li>Creación de las reglas gramaticales CGA necesarias para algunos de los elementos incluidos en las escenas</li>
+        <li>Creación de las reglas gramaticales CGA de CityEngine necesarias para algunos de los elementos incluidos en las escenas</li>
         <li>Desarrollo de widgets con Web AppBuilder</li>
       </ul>
     </td>
@@ -416,13 +416,13 @@ Menu <span class="caret"></span>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-cycle"></span></td>
-    <td class="col-md-9">640 horas - 64 créditos ECTS</td>
+    <td class="col-md-9">640 horas - 64 créditos ECTS - Realizando el TFM</td>
   </tr>
 </table>
 <table class="table table-hover table-condensed">
   <tr>
     <td class="col-md-3 text-center">Junio 2017</td>
-    <td class="col-xs-9 col-md-9 info">Máster GIS de Esri España</td>
+    <td class="col-xs-9 col-md-9 info">Máster en Sistemas de Información Geográfica de Esri España</td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
