--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@ Menu <span class="caret"></span>
         <li>Automatización de los geoprocesos necesarios para importar los CADs mediante scripts de Python y modelos de Model Builder</li>
         <li>Creación de las reglas gramaticales CGA de CityEngine necesarias para algunos de los elementos incluidos en las escenas</li>
         <li>Desarrollo de widgets con Web AppBuilder</li>
+        <li>Creación de redes de navegación en el interior de edificios con ArcGIS Indoors</li>
       </ul>
     </td>
   </tr>
